# ai-resume-matching

./: .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_create_initial_tables.py  002_add_skills_and_file_columns.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: __init__.py  job.py  match.py  resume.py
apps/api/app/routers/: __init__.py  jobs.py  matches.py  resumes.py
apps/api/app/schemas/: __init__.py  job.py  match.py  resume.py
apps/api/app/seeds/: jobs.py
apps/api/app/services/: __init__.py  embedding.py  file_parser.py  matching.py  pii_stripper.py  skill_extraction.py
apps/api/tests/: conftest.py  test_api_endpoints.py  test_embedding_service.py  test_matching_service.py
apps/web/: .env.example  .gitignore  index.html  package.json  pnpm-lock.yaml
apps/web/src/: App.tsx  index.css
apps/web/src/api/: client.ts
apps/web/src/components/: DataTable.tsx  MatchCard.tsx  ScoreBadge.tsx  TextForm.tsx
apps/web/src/components/__tests__/: DataTable.test.tsx  MatchCard.test.tsx  ScoreBadge.test.tsx  TextForm.test.tsx
apps/web/src/pages/: AddJob.tsx  AddResume.tsx  Dashboard.tsx  JobDetail.tsx  JobsList.tsx  ResumeDetail.tsx  ResumesList.tsx
apps/web/src/types/: index.ts
